--- a/modules/Campaigns/WizardMarketing.html
+++ b/modules/Campaigns/WizardMarketing.html
@@ -83,6 +83,7 @@
 						<td{if $campaign_type != 'NewsLetter' || $campaign_type=='Email'} style="display:none;"{/if}><div id="back_button_div"><input id="wiz_back_button" type='button' title="{$APP.LBL_BACK}" class="button" onclick="determine_back();"  name="back" value="{$APP.LBL_BACK}"></div></td>
 
 
+					<td><div id="back_button_div"><input id="wiz_back_button" type="button" title="Back" class="button" onclick="onBackClick();" name="back" value="Back"></div></td>
 						<td><div id="cancel_button_div"><input id="wiz_cancel_button" title="{$APP.LBL_CANCEL_BUTTON_TITLE}" accessKey="{$APP.LBL_CANCEL_BUTTON_KEY}" class="button" onclick="this.form.action.value='WizardHome'; this.form.module.value='Campaigns'; this.form.record.value='{$CAMPAIGN_ID}';" type="submit" name="button" value="{$APP.LBL_CANCEL_BUTTON_LABEL}"></div></td>
 
 						<td><div id="save_button_div"><input id="wiz_submit_button" title="{$APP.LBL_SAVE_BUTTON_TITLE}" accessKey="{$APP.LBL_SAVE_BUTTON_KEY}" class="button" onclick="this.form.action.value='WizardMarketingSave'; this.form.module.value='Campaigns'; $('#show_wizard_summary').val('1'); " type="submit" name="button" value="{$APP.LBL_NEXT_BUTTON_LABEL}" ></div>
@@ -188,6 +189,39 @@
 			}
 			return true;
 		};
+
+		function onBackClick() {
+			switch(document.getElementById('wiz_current_step').value) {
+				case '1':
+					var updateChecked = $('input[name="update_exists_template"]').prop('checked');
+					if(!updateChecked || (updateChecked && confirm('{/literal}{$MOD.LBL_OVERWRITE_TEMPLATE_CONFIRM_DIALOG}{literal}'))) {
+						// validate email template form before save
+						if (isValidEmailTemplateFormAndShowErrors()) {
+							onSaveCopyMarketingEmailTemplate(function () {
+								if (hasNewAttachments()) {
+									submitMarketingEmailAttachments();
+								}
+								else {
+									determine_back();
+								}
+							});
+						}
+					}
+					break;
+
+				case '2':
+					// save/create marketing email first
+					onSaveMarketingEmail(function(){
+						determine_back();
+					});
+					break;
+
+				default:
+					determine_back();
+					break;
+
+			}
+		}
 
 		function onNextClick() {
 			switch(document.getElementById('wiz_current_step').value) {
