Fixing hanging and stage two submit issue

--- a/modules/Campaigns/WizardHome.html
+++ b/modules/Campaigns/WizardHome.html
@@ -43,7 +43,7 @@
 -->
 <form id="wizform" name="wizform" method="POST" action="index.php">
 	<input type="hidden" id="module" name="module" value="Campaigns">
-	<input type="hidden" id="action" name="action" = "WizardHome">
+	<input type="hidden" id="action" name="action" data-action=WizardHome">
 	<input type="hidden" id="process_form" name="process_form" value='false' >		
 	<input type="hidden" id="return_module" name="return_module" value="{$RETURN_MODULE}">
 	<input type="hidden" id="return_id" name="return_id" value="{$RETURN_ID}">
