making progress bar inline with the wizard buttons (next, previous etc...)

--- a/modules/Campaigns/WizardMarketing.html
+++ b/modules/Campaigns/WizardMarketing.html
@@ -68,13 +68,14 @@
 	<input type="hidden" id="sendMarketingEmailTest" name="sendMarketingEmailTest" value="0">
 	<input type="hidden" id="sendMarketingEmailSchedule" name="sendMarketingEmailSchedule" value="0">
 
-	{$WIZMENU}
+
 
 <p>
-<div id ='buttons' >
+<div id ='buttons'>
+
 	<table width="100%" border="0" cellspacing="0" cellpadding="0" >
 		<tr>
-			<td align="left" width='30%'>
+			<td width="auto">
 				<table border="0" cellspacing="0" cellpadding="0" ><tr>
 
 					<tr>
@@ -122,7 +123,7 @@
 					</tr>
 				</table>
 			</td>
-			<td  align="right" width='40%'><div id='wiz_location_message'></td>
+			<td>{$WIZMENU}<div id='wiz_location_message'></div></td>
 		</tr>
 	</table>
 </div>
