--- a/modules/Campaigns/tpls/progressStepsStyle.html
+++ b/modules/Campaigns/tpls/progressStepsStyle.html
@@ -1,7 +1,8 @@
 <style>
     .progression-container {
-        margin: 0 0 8px 0;
-        padding:0;
+        margin: 0 0 0 0;
+        padding: 0 0 0 10px;
+
     }
 
     ul.progression {
@@ -14,9 +15,9 @@
         border-radius: 0px;
         display: inline-block;
         padding: 5px 20px 5px 20px;
-        margin-right: 16px;
+        margin: 2px 16px 2px 0px;
         width: auto;
-        margin-top: 4px;
+        font-size: 13.2px;
     }
 
     .progression li:nth-child(1)::before {
@@ -44,7 +45,7 @@
 
     .progression li::after {
         border-left-color: #3C8DBC;
-        border-width: 13px;
+        border-width: 14px;
         margin-top: -5px;
         margin-left: 20px;
     }
