--- a/modules/Campaigns/WizardNewsletter.html
+++ b/modules/Campaigns/WizardNewsletter.html
@@ -58,10 +58,7 @@
 <table class='other view' cellspacing="1">
 <tr>
 <td rowspan='2' width="10%" scope='row'>
-<div id='nav' >
-{$NAV_ITEMS}
 
-</div>
 
 </td>
 <td class='tabForm' rowspan='2' width='100%'>
@@ -79,18 +76,23 @@
 <div id ='buttons'>
 <table width="100%" border="0" cellspacing="0" cellpadding="0" >
 <tr>
-	<td  align="right" width='40%'><div id='wiz_location_message'></td>
-	<td  align="right" width='30%'>
+	<td>
 		<table><tr>
 			<td><div id="back_button_div"><input id="wiz_back_button" type='button' title="{$APP.LBL_BACK}" class="button" onclick="javascript:navigate('back');"  name="back" value="{$APP.LBL_BACK}"></div></td>
 			<td><div id="cancel_button_div"><input id="wiz_cancel_button" title="{$APP.LBL_CANCEL_BUTTON_TITLE}" accessKey="{$APP.LBL_CANCEL_BUTTON_KEY}" class="button" onclick="this.form.action.value='WizardHome'; this.form.module.value='Campaigns'; this.form.record.value='{$RETURN_ID}';" type="submit" name="button" value="{$APP.LBL_CANCEL_BUTTON_LABEL}"></div></td>
 			<td nowrap="nowrap">
-			<div id="save_button_div">
-				<input id="wiz_submit_button" class="button" onclick="this.form.action.value='WizardNewsletterSave';this.form.direction.value='continue';gatherTrackers();"  accesKey="{$APP.LBL_SAVE_BUTTON_TITLE}" type="{$HIDE_CONTINUE}" name="button" value="{$MOD.LBL_SAVE_CONTINUE_BUTTON_LABEL}" >
-				<input id="wiz_submit_finish_button" class="button" onclick="this.form.action.value='WizardNewsletterSave';this.form.direction.value='exit';gatherTrackers();"  accesKey="{$APP.LBL_SAVE_BUTTON_TITLE}" type="submit" name="button" value="{$MOD.LBL_SAVE_EXIT_BUTTON_LABEL}" >
-			</div></td>
+				<div id="save_button_div">
+					<input id="wiz_submit_button" class="button" onclick="this.form.action.value='WizardNewsletterSave';this.form.direction.value='continue';gatherTrackers();"  accesKey="{$APP.LBL_SAVE_BUTTON_TITLE}" type="{$HIDE_CONTINUE}" name="button" value="{$MOD.LBL_SAVE_CONTINUE_BUTTON_LABEL}" >
+					<input id="wiz_submit_finish_button" class="button" onclick="this.form.action.value='WizardNewsletterSave';this.form.direction.value='exit';gatherTrackers();"  accesKey="{$APP.LBL_SAVE_BUTTON_TITLE}" type="submit" name="button" value="{$MOD.LBL_SAVE_EXIT_BUTTON_LABEL}" >
+				</div></td>
 			<td><div id="next_button_div"><input id="wiz_next_button" type='button' title="{$APP.LBL_NEXT_BUTTON_LABEL}" class="button" onclick="javascript:navigate('next');" name="button" value="{$APP.LBL_NEXT_BUTTON_LABEL}"></div></td>
 		</tr></table>
+	</td>
+	<td>
+		<div id='nav' >
+			{$NAV_ITEMS}
+		</div>
+		<div id='wiz_location_message'></div>
 	</td>
 </tr>
 </table>
